--- a/packages.html
+++ b/packages.html
@@ -54,7 +54,6 @@
                 <ul class="menu ml-auto mt-1">
                     <li class=""><a href="index.html">Главная</a></li>
                     <li class=""><a href="about.html"> О Нас </a></li>
-                    <!--<li class=""><a href="services.html">Сервисы</a></li>-->
                     <li class="active"><a href="packages.html">Туры</a></li>
                     <li class=""><a href="contact.html">Контакты</a></li>
                     <li class="booking"><a href="booking.html">Забронировать</a></li>
@@ -83,7 +82,7 @@
                 <!--  Пиво -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novi-povorot.pp.ua/page-Beer.html">
+                        <a href="https://novipovorot.pp.ua/page-Beer.html">
                             <img src="images/beer-mini.jpg" alt="Пиво" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>195грн.</span></p>
@@ -91,7 +90,7 @@
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
                         <h5 class="my-2">
-                            <a href="https://novi-povorot.pp.ua/page-Beer.html">
+                            <a href="https://novipovorot.pp.ua/page-Beer.html">
                                 Натуральное пиво
                             </a>
                         </h5>
@@ -108,7 +107,7 @@
                 <!--  Турция -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novi-povorot.pp.ua/page-Turkey.html">
+                        <a href="https://novipovorot.pp.ua/page-Turkey.html">
                             <img src="images/Turkey-mini.jpg" alt="" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>190$</span></p>
@@ -116,7 +115,7 @@
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Турция</h6>
                         <h5 class="my-2">
-                            <a href="https://novi-povorot.pp.ua/page-Turkey.html"> Походы по Турции</a>
+                            <a href="https://novipovorot.pp.ua/page-Turkey.html"> Походы по Турции</a>
                         </h5>
                         <p class="">Расписание походов по Турции...</p>
                         <ul class="listing mt-3">
@@ -129,14 +128,14 @@
                 <!--  Полтава -->
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novi-povorot.pp.ua/page-Poltava.html">
+                        <a href="https://novipovorot.pp.ua/page-Poltava.html">
                             <img src="images/Poltava-mini.jpg" alt="" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>1700грн.</span></p>
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Полтава, Украина.</h6>
-                        <h5 class="my-2"><a href="https://novi-povorot.pp.ua/page-Poltava.html">Полтава</a></h5>
+                        <h5 class="my-2"><a href="https://novipovorot.pp.ua/page-Poltava.html">Полтава</a></h5>
                         <p class="">Лыжные покатухи и колоритный хутор с Новым поворотом </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
@@ -148,7 +147,7 @@
                 <!--  Лимонарий   -->
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novi-povorot.pp.ua/page-Limonariy.html">
+                        <a href="https://novipovorot.pp.ua/page-Limonariy.html">
                             <img src="images/2021 Лим 2550 на 1700.jpg" alt="Лимонарий" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>230грн.</span></p>
@@ -156,7 +155,7 @@
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
                         <h5 class="my-2">
-                            <a href="https://novi-povorot.pp.ua/page-Limonariy.html">
+                            <a href="https://novipovorot.pp.ua/page-Limonariy.html">
                                 Лимонарий
                             </a>
                         </h5>
@@ -171,7 +170,7 @@
                 <!--  ЛОЛ -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novi-povorot.pp.ua/page-LOL.html">
+                        <a href="https://novipovorot.pp.ua/page-LOL.html">
                             <img src="images/lol-mini.jpg" alt="LOL" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>170грн.</span></p>
@@ -179,7 +178,7 @@
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
                         <h5 class="my-2">
-                            <a href="https://novi-povorot.pp.ua/page-LOL.html">
+                            <a href="https://novipovorot.pp.ua/page-LOL.html">
                                 Лол
                             </a>
                         </h5>
@@ -194,7 +193,7 @@
                 <!--  Хортица -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novi-povorot.pp.ua/page-Hortica.html">
+                        <a href="https://novipovorot.pp.ua/page-Hortica.html">
                             <img src="images/hortica-mini.jpg" alt="Hortica" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>95грн.</span></p>
@@ -202,7 +201,7 @@
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
                         <h5 class="my-2">
-                            <a href="https://novi-povorot.pp.ua/page-Hortica.html">
+                            <a href="https://novipovorot.pp.ua/page-Hortica.html">
                                 Хортица
                             </a>
                         </h5>
@@ -217,7 +216,7 @@
                 <!--  Карпаты -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novi-povorot.pp.ua/page-Karpati.html">
+                        <a href="https://novipovorot.pp.ua/page-Karpati.html">
                             <img src="images/karpati-mini.jpg" alt="LOL" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>2400грн.</span></p>
@@ -225,7 +224,7 @@
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Карпаты, Украина.</h6>
                         <h5 class="my-2">
-                            <a href="https://novi-povorot.pp.ua/page-Karpati.html">
+                            <a href="https://novipovorot.pp.ua/page-Karpati.html">
                                 Карпаты
                             </a>
                         </h5>
@@ -240,7 +239,7 @@
                 <!--  8 марта  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novi-povorot.pp.ua/page-eight-march.html">
+                        <a href="https://novipovorot.pp.ua/page-eight-march.html">
                             <img src="images/eight-march-mini.jpg" alt="LOL" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>195грн.</span></p>
@@ -248,7 +247,7 @@
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
                         <h5 class="my-2">
-                            <a href="https://novi-povorot.pp.ua/page-eight-march.html">
+                            <a href="https://novipovorot.pp.ua/page-eight-march.html">
                                 Букет к 8 марта
                             </a>
                         </h5>
@@ -278,7 +277,7 @@
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
                     <h4 class="destination mb-3">Лимонарий</h4>
                     <div class="image-position position-relative">
-                        <a href="https://novi-povorot.pp.ua/page-Limonariy.html">
+                        <a href="https://novipovorot.pp.ua/page-Limonariy.html">
                             <img src="images/2021 Лим 2550 на 2910.jpg" class="img-fluid" alt="">
                         </a>
                         <div class="rating">
@@ -304,7 +303,7 @@
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
                     <h4 class="destination mb-3">Полтава</h4>
                     <div class="image-position position-relative">
-                        <a href="https://novi-povorot.pp.ua/page-Poltava.html">
+                        <a href="https://novipovorot.pp.ua/page-Poltava.html">
                             <img src="images/Poltava-max.jpg" class="img-fluid" alt="Полтава">
                         </a>
                         <div class="rating">
@@ -330,7 +329,7 @@
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
                     <h4 class="destination mb-3">Пиво</h4>
                     <div class="image-position position-relative">
-                        <a href="https://novi-povorot.pp.ua/page-Beer.html">
+                        <a href="https://novipovorot.pp.ua/page-Beer.html">
                             <img src="images/beer-max.jpg" class="img-fluid" alt="">
                         </a>
                         <div class="rating">
@@ -356,7 +355,9 @@
                 <div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
                     <h4 class="destination mb-3">Турция</h4>
                     <div class="image-position position-relative">
+		      <a href="https://novipovorot.pp.ua/page-Turkey.html">
                         <img src="images/Turkey-max.jpg" class="img-fluid" alt="">
+	              </a>
                         <div class="rating">
                             <ul>
                                 <li><span class="fa fa-star"></span></li>
@@ -440,18 +441,18 @@
                         </div>
                         <div class="row">
                             <ul class="col-6 links">
-                                <li><a href="https://novi-povorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>
-                                <li><a href="https://novi-povorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
-                                <li><a href="https://novi-povorot.pp.ua/page-Poltava.html" class="scroll">Полтава</a>
+                                <li><a href="https://novipovorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Poltava.html" class="scroll">Полтава</a>
                                 </li>
-                                <li><a href="https://novi-povorot.pp.ua/page-Karpati.html" class="scroll">Карпаты</a>
+                                <li><a href="https://novipovorot.pp.ua/page-Karpati.html" class="scroll">Карпаты</a>
                                 </li>
                             </ul>
                             <ul class="col-6 links">
-                                <li><a href="https://novi-povorot.pp.ua/page-Limonariy.html"
+                                <li><a href="https://novipovorot.pp.ua/page-Limonariy.html"
                                         class="scroll">Лимонарий</a></li>
-                                <li><a href="https://novi-povorot.pp.ua/page-LOL.html" class="scroll">ЛОЛ</a></li>
-                                <li><a href="https://novi-povorot.pp.ua/page-Hortica.html" class="scroll">Хортица</a>
+                                <li><a href="https://novipovorot.pp.ua/page-LOL.html" class="scroll">ЛОЛ</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Hortica.html" class="scroll">Хортица</a>
                                 </li>
                             </ul>
                         </div>
@@ -492,13 +493,6 @@
         </a>
     </div>
     <!-- move top -->
-
-
-    <!-- 
-	**********************************
-	          Java Script
-	**********************************
- -->
 
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.5.1.js"
