--- a/page-Odessa-on-march.html
+++ b/page-Odessa-on-march.html
@@ -172,7 +172,7 @@
                                     <h5 class="mb-0">
                                         <button class="btn btn-link" type="button" data-toggle="collapse"
                                             data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                            <span class="fa fa-angle-right"></span> Описание экскурсии: День 1
+                                            <span class="fa fa-angle-right"></span> Описание экскурсии...
                                         </button>
                                     </h5>
                                 </div>
@@ -180,77 +180,55 @@
                                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
+					    <h6>Описание экскурсии: 1 — 3 день (6 — 8 марта)</h6>
                                         <p>
-					   
-1 — 3 день (6 — 8 марта)
-
-Приезжаем  раненько в Одессу и СРАЗУ К МОРЮ!! Завтрак у моря!
-Чтобы наше пребывание  в Южной Пальмире осталось  ярким и запоминающимся  
-
-— мы  будем  много и  «качественно гулять»  по Одессе вместе с местными 
-
-экскурсоводами  , которые  умеют это делать профессионально!. 
-
- А если вы думаете, что гулять – это так просто, так мы будем поспорить. 
-
-Важно знать, где гулять, с кем гулять, и как гулять! 
-
-Автобусно-пешеходные экскурсии: Обзорная ,  Криминальная Одесса , 
-
-Еврейская Одесса , по одесским дворикам, скандалы  старой Одессы  — это 
-
-не  просто экскурсии, это захватывающие приключения , погружения в тайну!
-
-  Самое уникальное путешествие — 20 000 ЛЬЕ ПОД ЗЕМЛЕЙ -подземный бункер, 
-
-времён «холодной войны» с 4-й степенью защиты,  кладбище животных, 
-
-средний возраст которых 3,5 миллиона лет, подземные озёра,  тайные схроны 
-
-партизан и бандитских налётчиков Молдаванки …     это не экскурсия в 
-
-обычном понимании этого слова. Правильнее это назвать — погружение в 
-
-тайну.  
-
-Вы услышите столько рассказов, что «ведром не вычерпать»!!! Самые громкие 
-
-местные истории » с бородой», авантюрные интриги и скандальные авантюры,  
-
-тайны одесских двориков и их аборигенов.    Вы узнаете все про Одессу и 
-
-даже больше!!!
-
- Жить в центре —  самый  удобный и оптимальный вариант для комфортных 
-
-прогулок и знакомства с городом. Все главные достопримечательности «под 
-
-боком» и в любое время можно забежать «домой», чтобы отдохнуть, 
-
-перекусить или переодеться. Именно поэтому мы выбрали один из лучших  
-
-хостелов , расположившийся в самом сердце города.
-
-А по вечерам — продолжаем  все вместе гулять! Все самое лучшее, самое 
-
-яркое, самое атмосферное  для нашей веселой компании! 
-
- По очень доступным ценам можно  посетить  один из театров, или 
-
-филармонию,  или «Дом Клоуна -театр группы «Маски», театр Муз-Комедии  и 
-
-,конечно, Оперный театр, а вечер живой музыки в знаменитом «Гамбринусе» — 
-
-это просто супер!  
-
-А,  ВЫ ЕЩЕ СМОТРИТЕ НА ЭКРАН?!  ИДИТЕ И СМОТРИТЕ ОДЕССУ!!!!  
-
-8 марта  —  вечерний  выезд домой в Запорожье. Будем дома во вторник, 9 
-
-марта,  не позднее  6 утра.
-
-*Программа может быть незначительно изменена, без ущерба для отдыха 
-туристам! 
+                                            Приезжаем раненько в Одессу и СРАЗУ К МОРЮ! Завтрак у моря!
+                                            Чтобы наше пребывание в Южной Пальмире осталось ярким и запоминающимся
+                                            — мы будем много и «качественно гулять» по Одессе вместе с местными
+                                            экскурсоводами, которые умеют это делать профессионально!
+                                            А если вы думаете, что гулять – это так просто, так мы можем поспорить.
+                                            Важно знать, где гулять, с кем гулять, и как гулять!
+					 </p>
+					 <p>
+                                            Автобусно-пешеходные экскурсии: Обзорная, Криминальная Одесса,
+                                            Еврейская Одесса, по одесским дворикам, скандалы старой Одессы — это
+                                            не просто экскурсии, это захватывающие приключения, погружения в тайну!
+                                            Самое уникальное путешествие — 20 000 ЛЬЕ ПОД ЗЕМЛЕЙ - подземный бункер,
+                                            времён «холодной войны» с 4-й степенью защиты, кладбище животных,
+                                            средний возраст которых 3,5 миллиона лет, подземные озёра, тайные схроны
+                                            партизан и бандитских налётчиков Молдаванки - это не экскурсия в
+                                            обычном понимании этого слова. Правильнее это назвать — погружение в
+                                            тайну.
+					 </p>
+					 <p>
+                                            Вы услышите столько рассказов, что «ведром не вычерпать»!!! Самые громкие
+                                            местные истории, авантюрные интриги и скандальные авантюры,
+                                            тайны одесских двориков и их аборигенов. Вы узнаете все про Одессу и
+                                            даже больше!!!
+                                            Жить в центре — самый удобный и оптимальный вариант для комфортных
+                                            прогулок и знакомства с городом. Все главные достопримечательности «под
+                                            боком» и в любое время можно забежать «домой», чтобы отдохнуть,
+                                            перекусить или переодеться. Именно поэтому мы выбрали один из лучших
+                                            хостелов, расположившийся в самом сердце города.
+                                            А по вечерам — продолжаем все вместе гулять! Все самое лучшее, самое
+                                            яркое, самое атмосферное для нашей веселой компании!
+					 </p>
+					 <p> 
+                                            По очень доступным ценам можно посетить один из театров, или
+                                            филармонию, или «Дом Клоуна -театр группы «Маски», театр Муз-Комедии и
+                                            конечно, Оперный театр, а вечер живой музыки в знаменитом «Гамбринусе» —
+                                            это просто супер!
+					</p>
+					 <p>
+                                            А, ВЫ ЕЩЕ СМОТРИТЕ НА ЭКРАН?! СОБИРАЙТЕСЬ СМОТРЕТЬ ОДЕССУ!
+                                            8 марта — вечерний выезд домой в Запорожье. Будем дома во вторник, 9
+                                            марта, не позднее 6 утра.
+					</p>
+					<hr>
+					<p>
+                                           <i> *Программа может быть незначительно изменена, без ущерба для отдыха
+                                            туристам!
+					   </i>
                                         </p>
                                     </div>
                                 </div>
@@ -263,34 +241,34 @@
                             <h5 class="alert-heading">В стоимость входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-success">
-                                    проезд  Запорожье — Одесса- Запорожье;
+                                    проезд Запорожье — Одесса- Запорожье;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    транспортное обслуживание  во время экскурсий;
+                                    транспортное обслуживание во время экскурсий;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    проживание :  2 ночи  в хостеле в центре Одессы;
+                                    проживание : 2 ночи в хостеле в центре Одессы;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                   экскурсии  от одесских экскурсоводов каждый день на разные тематики;
+                                    экскурсии от одесских экскурсоводов каждый день на разные тематики;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                     сопровождение.
                                 </li>
                             </ul>
                         </div>
- 
+
                         <div class="alert alert-danger">
                             <h5 class="alert-heading">В стоимость не входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-danger ">
-                                   посещение музеев и театров по желанию;
+                                    посещение музеев и театров по желанию;
                                 </li>
                                 <li class="list-group-item list-group-item-danger ">
-                                   личные расходы и питание (рядом с нами будут
-					маркеты и заведения быстрого питания,
-					плюс: можно взять из дома  продукты, 
-					в хостеле есть кухня и холодильник).
+                                    личные расходы и питание (рядом с нами будут
+                                    маркеты и заведения быстрого питания,
+                                    плюс: можно взять из дома продукты,
+                                    в хостеле есть кухня и холодильник).
                                 </li>
                                 <ul>
                         </div>
